; ModuleID = '/home/carl/AnghaBench/linux/kernel/bpf/extr_arraymap.c_bpf_fd_array_map_lookup_elem.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/bpf/extr_arraymap.c_bpf_fd_array_map_lookup_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_map = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i8*)* }

@ENOTSUPP = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bpf_fd_array_map_lookup_elem(%struct.bpf_map* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.bpf_map*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store %struct.bpf_map* %0, %struct.bpf_map** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 0, i32* %10, align 4
  %11 = load %struct.bpf_map*, %struct.bpf_map** %5, align 8
  %12 = getelementptr inbounds %struct.bpf_map, %struct.bpf_map* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (i8*)*, i32 (i8*)** %14, align 8
  %16 = icmp ne i32 (i8*)* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* @ENOTSUPP, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %4, align 4
  br label %47

20:                                               ; preds = %3
  %21 = call i32 (...) @rcu_read_lock()
  %22 = load %struct.bpf_map*, %struct.bpf_map** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i8** @array_map_lookup_elem(%struct.bpf_map* %22, i8* %23)
  store i8** %24, i8*** %8, align 8
  %25 = load i8**, i8*** %8, align 8
  %26 = icmp ne i8** %25, null
  br i1 %26, label %27, label %41

27:                                               ; preds = %20
  %28 = load i8**, i8*** %8, align 8
  %29 = load i8*, i8** %28, align 8
  %30 = call i8* @READ_ONCE(i8* %29)
  store i8* %30, i8** %9, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %41

32:                                               ; preds = %27
  %33 = load %struct.bpf_map*, %struct.bpf_map** %5, align 8
  %34 = getelementptr inbounds %struct.bpf_map, %struct.bpf_map* %33, i32 0, i32 0
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32 (i8*)*, i32 (i8*)** %36, align 8
  %38 = load i8*, i8** %9, align 8
  %39 = call i32 %37(i8* %38)
  %40 = load i32*, i32** %7, align 8
  store i32 %39, i32* %40, align 4
  br label %44

41:                                               ; preds = %27, %20
  %42 = load i32, i32* @ENOENT, align 4
  %43 = sub nsw i32 0, %42
  store i32 %43, i32* %10, align 4
  br label %44

44:                                               ; preds = %41, %32
  %45 = call i32 (...) @rcu_read_unlock()
  %46 = load i32, i32* %10, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %44, %17
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local i8** @array_map_lookup_elem(%struct.bpf_map*, i8*) #1

declare dso_local i8* @READ_ONCE(i8*) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
